# yalos

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: lib.rs  logging.rs  macros.rs  main.rs  time.rs  util.rs  vga_buffer.rs
src/arch/: idt.rs  macros.rs  mod.rs
src/arch/device/: mod.rs  pic.rs  pit.rs  port.rs
src/arch/interrupt/: exception.rs  irq.rs
src/arch/interrupts/: exception.rs  idt.rs  irq.rs  mod.rs
src/arch/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
src/arch/memory/heap/: bump_allocator.rs  mod.rs
src/cpu/: idt.rs  mod.rs  pic.rs  pit.rs
src/devices/: mod.rs  serial.rs
src/drivers/: keyboard.rs  mod.rs  ports.rs  uart_16550.rs  vga_buffer.rs
src/io/: io.rs  macros.rs  mod.rs  port.rs  serial.rs
tests/: basic_boot.rs  panic_handler.rs
