[package]
authors = ["Noskcaj <kcajdev@gmail.com>"]
name = "yalos"
version = "0.1.0"

[dependencies]
rlibc = "1.0.0"
spin = "0.4.7"
volatile = "0.2.3"
os_bootinfo = "0.2.0"
linked_list_allocator = "0.6.1"
once = "0.3.3"
bitflags = "1.0.3"
x86_64 = "0.2.6"


[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[dev-dependencies]
array-init = "0.0.3"
